# backend

./: .gitignore  Cargo.toml  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature-template.md
.github/workflows/: sonarcloud.yml
backend/: .gitignore  Cargo.toml
backend/api/: Cargo.toml
backend/api/src/utils/error/: app_error.rs  error_into_response.rs
backend/common/: Cargo.toml
backend/common/src/error/: app_error.rs  common_error_code.rs  error_code.rs  error_reason.rs  mod.rs
backend/config/: default.yml  local.yml
backend/domain/: Cargo.toml
backend/infra/: Cargo.toml
backend/todo-api/: Cargo.toml
backend/todo-api/src/: main.rs  routes.rs
backend/todo-api/src/bootstrap/: config.rs  logger.rs  mod.rs  state.rs
backend/todo-api/src/common/error/: database_error_wrapper.rs  error_into_response.rs  mod.rs  postgres_error_wrapper.rs
backend/todo-api/src/common/response/: api_response.rs
backend/todo-api/src/domain/: mod.rs
backend/todo-api/src/domain/system/: handlers.rs  routes.rs
backend/todo-api/src/domain/todo/: handlers.rs  routes.rs
backend/todo-common/src/error/: error_code.rs
backend/todo-domain/: Cargo.toml
backend/todo-domain/src/todo/: error.rs  mod.rs  todo_error_code.rs
backend/todo-domain/src/user/: error.rs  mod.rs  user_error_code.rs
backend/todo-infra/: Cargo.toml
backend/todo-infra/src/database/: database_error_code.rs  error.rs  mod.rs
backend/todo-infra/src/database/postgres/: mod.rs
backend/todo-infra/src/database/postgres/todo/: mod.rs  todo_item_entity.rs  todo_mapper.rs  todo_repository_impl.rs
backend/todo-infra/src/database/postgres/user/: social_account_entity.rs  social_account_mapper.rs  social_account_repository_impl.rs  user_entity.rs  user_repository_impl.rs
morutine-api/: Cargo.toml
morutine-api/src/: main.rs  routes.rs
morutine-api/src/bootstrap/: cors.rs  mod.rs  state.rs
morutine-api/src/common/: auth.rs
morutine-common/src/constant/: status.rs
morutine-common/src/error/: common_error_code.rs  mod.rs
morutine-domain/: Cargo.toml
morutine-domain/src/todo/: mod.rs  todo_error_code.rs
morutine-domain/src/user/: user_error_code.rs
morutine-infra/: Cargo.toml
morutine-infra/src/database/postgres/: mod.rs
morutine-infra/src/database/postgres/migration/: init_tables.rs  mod.rs
morutine-infra/src/database/postgres/todo/: mod.rs  todo_entity.rs  todo_mapper.rs  todo_query_repository.rs  todo_query_repository_impl.rs
morutine-infra/src/database/postgres/user/: mod.rs  social_account_entity.rs  user_mapper.rs
todo-api/src/bootstrap/: logger.rs  middleware.rs
(+39 files in other folders)
