[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["macros"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
sea-orm = "1.1.19"
tower = { version = "0.5.2", features = ["timeout", "limit"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "request-id"] }
http = "1"

# 로깅 & 에러 핸들링
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1.0"
thiserror = "2.0.16"

# JSON 직렬화
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 환경 변수 관리
config = "0.15"
dotenvy = "0.15"

# JWT
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
bcrypt = "0.17.0"

# 도메인/인프라 의존성
domain = { path = "../todo-domain" }
infra = { path = "../todo-infra" }
common = { path = "../todo-common" }
